using gmm instead of kmeans

--- a/q2.ipynb
+++ b/q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 20531 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -283,25 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/sut-default-env/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
+    "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "df_scaled = StandardScaler().fit_transform(df)\n",
     "\n",
-    "kmeans = KMeans(n_clusters=5)\n",
+    "kmeans = GaussianMixture(n_components=5)\n",
     "cluster_labels = kmeans.fit_predict(df)\n",
     "\n",
     "output = pd.DataFrame({\"clusters\": cluster_labels}).to_csv(\"./q2/output.csv\")\n"
