enshallah ke kheyre

--- a/q2.ipynb
+++ b/q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 20531 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,60 +220,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['5', '23', '4370', '4808', '4809', '4814', '4816', '4817', '4831',\n",
-      "       '5288',\n",
-      "       ...\n",
-      "       '18908', '18909', '18910', '18911', '18914', '18915', '19450', '19451',\n",
-      "       '19452', '19671'],\n",
-      "      dtype='object', length=267)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zero_columns = df.columns[(df == 0).all()]\n",
-    "print(zero_columns)\n",
-    "df.drop(zero_columns, axis=1, inplace=True)\n",
+    "# zero_columns = df.columns[(df == 0).all()]\n",
+    "# print(zero_columns)\n",
+    "# df.drop(zero_columns, axis=1, inplace=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     0         1         2         3          4         6         7    8    9  \\\n",
-      "0  0.0  2.017209  3.265527  5.478487  10.431999  7.175175  0.591871  0.0  0.0   \n",
-      "1  0.0  0.592732  1.588421  7.586157   9.623011  6.816049  0.000000  0.0  0.0   \n",
-      "2  0.0  3.511759  4.327199  6.881787   9.870730  6.972130  0.452595  0.0  0.0   \n",
-      "3  0.0  3.663618  4.507649  6.659068  10.196184  7.843375  0.434882  0.0  0.0   \n",
-      "4  0.0  2.655741  2.821547  6.539454   9.738265  6.566967  0.360982  0.0  0.0   \n",
+      "     0         1         2         3          4    5         6         7    8  \\\n",
+      "0  0.0  2.017209  3.265527  5.478487  10.431999  0.0  7.175175  0.591871  0.0   \n",
+      "1  0.0  0.592732  1.588421  7.586157   9.623011  0.0  6.816049  0.000000  0.0   \n",
+      "2  0.0  3.511759  4.327199  6.881787   9.870730  0.0  6.972130  0.452595  0.0   \n",
+      "3  0.0  3.663618  4.507649  6.659068  10.196184  0.0  7.843375  0.434882  0.0   \n",
+      "4  0.0  2.655741  2.821547  6.539454   9.738265  0.0  6.566967  0.360982  0.0   \n",
       "\n",
-      "         10  ...     20521     20522      20523     20524     20525  \\\n",
-      "0  0.591871  ...  4.926711  8.210257   9.723516  7.220030  9.119813   \n",
-      "1  0.000000  ...  4.593372  7.323865   9.740931  6.256586  8.381612   \n",
-      "2  0.000000  ...  5.125213  8.127123  10.908640  5.401607  9.911597   \n",
-      "3  0.000000  ...  6.076566  8.792959  10.141520  8.942805  9.601208   \n",
-      "4  0.000000  ...  5.996032  8.891425  10.373790  7.181162  9.846910   \n",
+      "     9  ...     20521     20522      20523     20524     20525      20526  \\\n",
+      "0  0.0  ...  4.926711  8.210257   9.723516  7.220030  9.119813  12.003135   \n",
+      "1  0.0  ...  4.593372  7.323865   9.740931  6.256586  8.381612  12.674552   \n",
+      "2  0.0  ...  5.125213  8.127123  10.908640  5.401607  9.911597   9.045255   \n",
+      "3  0.0  ...  6.076566  8.792959  10.141520  8.942805  9.601208  11.392682   \n",
+      "4  0.0  ...  5.996032  8.891425  10.373790  7.181162  9.846910  11.922439   \n",
       "\n",
-      "       20526      20527      20528     20529  20530  \n",
-      "0  12.003135   9.650743   8.921326  5.286759    0.0  \n",
-      "1  12.674552  10.517059   9.397854  2.094168    0.0  \n",
-      "2   9.045255   9.788359  10.090470  1.683023    0.0  \n",
-      "3  11.392682   9.694814   9.684365  3.292001    0.0  \n",
-      "4  11.922439   9.217749   9.461191  5.110372    0.0  \n",
+      "       20527      20528     20529  20530  \n",
+      "0   9.650743   8.921326  5.286759    0.0  \n",
+      "1  10.517059   9.397854  2.094168    0.0  \n",
+      "2   9.788359  10.090470  1.683023    0.0  \n",
+      "3   9.694814   9.684365  3.292001    0.0  \n",
+      "4   9.217749   9.461191  5.110372    0.0  \n",
       "\n",
-      "[5 rows x 20264 columns]\n"
+      "[5 rows x 20531 columns]\n"
      ]
     }
    ],
@@ -283,18 +270,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialization 0\n",
+      "Initialization converged: True\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
     "\n",
     "df_scaled = StandardScaler().fit_transform(df)\n",
+    "df_pca = PCA(n_components=800).fit_transform(df_scaled)\n",
     "\n",
-    "kmeans = GaussianMixture(n_components=5)\n",
-    "cluster_labels = kmeans.fit_predict(df)\n",
+    "\n",
+    "\n",
+    "kmeans = GaussianMixture(n_components=5, init_params=\"k-means++\", max_iter=200, verbose=True)\n",
+    "cluster_labels = kmeans.fit_predict(df_pca)\n",
     "\n",
     "output = pd.DataFrame({\"clusters\": cluster_labels}).to_csv(\"./q2/output.csv\")\n"
    ]
