--- a/q3.ipynb
+++ b/q3.ipynb
@@ -107,12 +107,31 @@
    ],
    "source": [
     "print(train_features.head())\n",
-    "print()\n",
-    "print()\n",
-    "print(train_features.describe())\n",
-    "print()\n",
-    "print()\n",
+    "print(\"\\n\\n\")\n",
+    "print(train_features.info())\n",
+    "print(\"\\n\\n\")\n",
     "print(test_featues.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0'], dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_cl = train_features.select_dtypes(include=[\"object\"]).columns\n",
+    "obj_cl"
    ]
   }
  ],
