--- a/q2.ipynb
+++ b/q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 20531 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -270,154 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/sut-default-env/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialization complete\n",
-      "Iteration 0, inertia 34992635.91991584.\n",
-      "Iteration 1, inertia 20019223.883861676.\n",
-      "Iteration 2, inertia 19427135.035710566.\n",
-      "Iteration 3, inertia 19400694.645294063.\n",
-      "Iteration 4, inertia 19371643.22794521.\n",
-      "Iteration 5, inertia 19350620.30699444.\n",
-      "Iteration 6, inertia 19314822.325395025.\n",
-      "Iteration 7, inertia 19262408.72761268.\n",
-      "Iteration 8, inertia 19235075.689997774.\n",
-      "Iteration 9, inertia 19228301.33079232.\n",
-      "Iteration 10, inertia 19225555.49580853.\n",
-      "Converged at iteration 10: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 34359518.65208532.\n",
-      "Iteration 1, inertia 19615782.003319122.\n",
-      "Iteration 2, inertia 19111065.34845745.\n",
-      "Iteration 3, inertia 18479143.488063343.\n",
-      "Iteration 4, inertia 17833354.051265337.\n",
-      "Iteration 5, inertia 17803056.554484487.\n",
-      "Converged at iteration 5: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 34653174.00472899.\n",
-      "Iteration 1, inertia 19990870.843046546.\n",
-      "Iteration 2, inertia 19649011.226287767.\n",
-      "Iteration 3, inertia 19567781.418598242.\n",
-      "Iteration 4, inertia 19393360.302892514.\n",
-      "Iteration 5, inertia 18204706.94120743.\n",
-      "Iteration 6, inertia 17805442.01882802.\n",
-      "Iteration 7, inertia 17802860.97827778.\n",
-      "Iteration 8, inertia 17802165.934372343.\n",
-      "Converged at iteration 8: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 32795371.292545497.\n",
-      "Iteration 1, inertia 17928211.918736.\n",
-      "Iteration 2, inertia 17804523.660535343.\n",
-      "Iteration 3, inertia 17802878.79623964.\n",
-      "Iteration 4, inertia 17802183.936602235.\n",
-      "Converged at iteration 4: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 36953452.611647815.\n",
-      "Iteration 1, inertia 22339073.00566058.\n",
-      "Iteration 2, inertia 21410646.95418228.\n",
-      "Iteration 3, inertia 21195919.32045318.\n",
-      "Iteration 4, inertia 20903846.90514376.\n",
-      "Iteration 5, inertia 19946106.941271078.\n",
-      "Iteration 6, inertia 19197139.53697562.\n",
-      "Iteration 7, inertia 19135177.207819905.\n",
-      "Iteration 8, inertia 19109897.40586545.\n",
-      "Iteration 9, inertia 19101904.19335463.\n",
-      "Iteration 10, inertia 19094200.542117856.\n",
-      "Iteration 11, inertia 19089413.913964815.\n",
-      "Iteration 12, inertia 19085727.636953615.\n",
-      "Iteration 13, inertia 19069673.10998758.\n",
-      "Iteration 14, inertia 19017814.017137285.\n",
-      "Iteration 15, inertia 18926789.04678075.\n",
-      "Iteration 16, inertia 18863226.125823498.\n",
-      "Iteration 17, inertia 18833139.157794535.\n",
-      "Iteration 18, inertia 18791963.80128581.\n",
-      "Iteration 19, inertia 18764191.309097953.\n",
-      "Iteration 20, inertia 18760389.802920662.\n",
-      "Iteration 21, inertia 18759620.055748.\n",
-      "Iteration 22, inertia 18759022.700686842.\n",
-      "Converged at iteration 22: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 36766278.77537235.\n",
-      "Iteration 1, inertia 20114491.91078724.\n",
-      "Iteration 2, inertia 19064371.0798503.\n",
-      "Iteration 3, inertia 19050148.01100605.\n",
-      "Iteration 4, inertia 19041093.17273259.\n",
-      "Iteration 5, inertia 19025393.742787994.\n",
-      "Iteration 6, inertia 19001588.54125885.\n",
-      "Iteration 7, inertia 18987975.599203378.\n",
-      "Iteration 8, inertia 18974681.251913596.\n",
-      "Iteration 9, inertia 18959730.963977605.\n",
-      "Iteration 10, inertia 18951651.122783504.\n",
-      "Iteration 11, inertia 18947399.003872655.\n",
-      "Iteration 12, inertia 18945808.525373407.\n",
-      "Iteration 13, inertia 18944240.445075326.\n",
-      "Iteration 14, inertia 18942039.533026308.\n",
-      "Iteration 15, inertia 18937674.96368037.\n",
-      "Iteration 16, inertia 18934153.587789677.\n",
-      "Iteration 17, inertia 18930813.593573034.\n",
-      "Iteration 18, inertia 18923303.105971858.\n",
-      "Iteration 19, inertia 18891859.440212302.\n",
-      "Iteration 20, inertia 18837050.859372217.\n",
-      "Iteration 21, inertia 18795706.427345265.\n",
-      "Iteration 22, inertia 18771419.20062111.\n",
-      "Iteration 23, inertia 18766759.97543908.\n",
-      "Iteration 24, inertia 18761460.546567.\n",
-      "Iteration 25, inertia 18760805.94900851.\n",
-      "Iteration 26, inertia 18760149.85985732.\n",
-      "Converged at iteration 26: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 33789250.47992603.\n",
-      "Iteration 1, inertia 19861788.40784216.\n",
-      "Iteration 2, inertia 19684322.494662084.\n",
-      "Iteration 3, inertia 19614721.61478071.\n",
-      "Iteration 4, inertia 19610477.090211555.\n",
-      "Converged at iteration 4: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 38081286.518607765.\n",
-      "Iteration 1, inertia 21840755.76277957.\n",
-      "Iteration 2, inertia 19635482.002921242.\n",
-      "Iteration 3, inertia 19594046.240218945.\n",
-      "Iteration 4, inertia 19591694.462948255.\n",
-      "Iteration 5, inertia 19589038.41027142.\n",
-      "Iteration 6, inertia 19581299.771908343.\n",
-      "Iteration 7, inertia 19570819.5728599.\n",
-      "Iteration 8, inertia 19563868.361638345.\n",
-      "Iteration 9, inertia 19561257.89264097.\n",
-      "Iteration 10, inertia 19560829.160549942.\n",
-      "Converged at iteration 10: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 34484790.44695076.\n",
-      "Iteration 1, inertia 18218544.656445995.\n",
-      "Iteration 2, inertia 17804719.01227298.\n",
-      "Iteration 3, inertia 17802165.934372343.\n",
-      "Converged at iteration 3: strict convergence.\n",
-      "Initialization complete\n",
-      "Iteration 0, inertia 33264308.41207456.\n",
-      "Iteration 1, inertia 19473839.07549078.\n",
-      "Iteration 2, inertia 18273777.824193113.\n",
-      "Iteration 3, inertia 18158176.98353011.\n",
-      "Iteration 4, inertia 18068414.841467943.\n",
-      "Iteration 5, inertia 17838888.51494121.\n",
-      "Iteration 6, inertia 17802183.936602235.\n",
-      "Converged at iteration 6: strict convergence.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
     "from sklearn.mixture import GaussianMixture\n",
     "# from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
@@ -426,7 +283,7 @@
     "\n",
     "\n",
     "\n",
-    "kmeans = KMeans(n_clusters=5, init=\"k-means++\", max_iter=200, verbose=True, tol=0.00001, random_state=6942085)\n",
+    "kmeans = AgglomerativeClustering(n_clusters=5)\n",
     "cluster_labels = kmeans.fit_predict(df)\n",
     "\n",
     "output = pd.DataFrame({\"clusters\": cluster_labels}).to_csv(\"./q2/output.csv\")\n"
