--- a/q3.ipynb
+++ b/q3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "\n",
     "train_features = pd.read_csv(\"./q3/RNA-Seq dataset/train.csv\")\n",
     "train_labels = pd.read_csv(\"./q3/RNA-Seq dataset/train_labels.csv\")\n",
-    "test_featues = pd.read_csv(\"./q3/RNA-Seq dataset/test.csv\")"
+    "test_features = pd.read_csv(\"./q3/RNA-Seq dataset/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,69 +53,59 @@
       "[5 rows x 20532 columns]\n",
       "\n",
       "\n",
-      "           gene_0      gene_1      gene_2      gene_3      gene_4  gene_5  \\\n",
-      "count  700.000000  700.000000  700.000000  700.000000  700.000000   700.0   \n",
-      "mean     0.025925    2.972785    3.071272    6.730364    9.820249     0.0   \n",
-      "std      0.131518    1.215857    1.061743    0.648991    0.509005     0.0   \n",
-      "min      0.000000    0.000000    0.000000    5.009284    8.435999     0.0   \n",
-      "25%      0.000000    2.249392    2.369612    6.306873    9.458238     0.0   \n",
-      "50%      0.000000    3.093973    3.084362    6.663878    9.797328     0.0   \n",
-      "75%      0.000000    3.860842    3.737095    7.057962   10.168518     0.0   \n",
-      "max      1.241108    6.051542    6.063484   10.129528   11.355621     0.0   \n",
       "\n",
-      "           gene_6      gene_7      gene_8      gene_9  ...  gene_20521  \\\n",
-      "count  700.000000  700.000000  700.000000  700.000000  ...  700.000000   \n",
-      "mean     7.392561    0.497707    0.017966    0.015366  ...    5.895280   \n",
-      "std      1.116298    0.506469    0.139418    0.218946  ...    0.748816   \n",
-      "min      3.930747    0.000000    0.000000    0.000000  ...    2.853517   \n",
-      "25%      6.675696    0.000000    0.000000    0.000000  ...    5.447224   \n",
-      "50%      7.440931    0.443341    0.000000    0.000000  ...    5.969638   \n",
-      "75%      8.115501    0.781549    0.000000    0.000000  ...    6.415763   \n",
-      "max     10.718190    2.779008    1.785592    4.067604  ...    7.771054   \n",
-      "\n",
-      "       gene_20522  gene_20523  gene_20524  gene_20525  gene_20526  gene_20527  \\\n",
-      "count  700.000000  700.000000  700.000000  700.000000  700.000000  700.000000   \n",
-      "mean     8.759727   10.055986    4.799015    9.734600   11.763339   10.148856   \n",
-      "std      0.603981    0.385250    2.389745    0.541605    0.667649    0.579300   \n",
-      "min      6.678368    8.669456    0.000000    7.974942    9.045255    7.530141   \n",
-      "25%      8.379601    9.813678    3.040268    9.396457   11.346883    9.826726   \n",
-      "50%      8.780876   10.062984    5.432011    9.774717   11.763432   10.172646   \n",
-      "75%      9.148560   10.306543    6.599984   10.077703   12.186265   10.563491   \n",
-      "max     11.105431   11.318243    9.207495   11.811632   13.715361   11.675653   \n",
-      "\n",
-      "       gene_20528  gene_20529  gene_20530  \n",
-      "count  700.000000  700.000000  700.000000  \n",
-      "mean     9.582391    5.554854    0.097480  \n",
-      "std      0.579086    2.075913    0.378726  \n",
-      "min      7.864533    0.593975    0.000000  \n",
-      "25%      9.233083    4.134164    0.000000  \n",
-      "50%      9.562140    5.272942    0.000000  \n",
-      "75%      9.914400    6.908949    0.000000  \n",
-      "max     12.813320   11.205836    5.254133  \n",
-      "\n",
-      "[8 rows x 20531 columns]\n",
+      "  Unnamed: 0 Class\n",
+      "0   sample_0  PRAD\n",
+      "1   sample_1  LUAD\n",
+      "2   sample_2  PRAD\n",
+      "3   sample_5  PRAD\n",
+      "4   sample_6  KIRC\n",
       "\n",
       "\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 101 entries, 0 to 100\n",
-      "Columns: 20532 entries, Unnamed: 0 to gene_20530\n",
-      "dtypes: float64(20531), object(1)\n",
-      "memory usage: 15.8+ MB\n",
-      "None\n"
+      "\n",
+      "   Unnamed: 0    gene_0    gene_1    gene_2    gene_3    gene_4  gene_5  \\\n",
+      "0  sample_661  0.000000  3.395872  3.274023  7.050251  9.895044     0.0   \n",
+      "1   sample_72  1.482332  2.907198  4.034365  6.613129  9.456295     0.0   \n",
+      "2    sample_9  0.000000  3.642494  4.423558  6.849511  9.464466     0.0   \n",
+      "3  sample_316  0.000000  4.365686  4.142609  6.310825  8.623929     0.0   \n",
+      "4  sample_519  0.000000  3.981588  4.008218  6.870698  9.477366     0.0   \n",
+      "\n",
+      "      gene_6    gene_7  gene_8  ...  gene_20521  gene_20522  gene_20523  \\\n",
+      "0   6.898390  0.969307     0.0  ...    6.645844    9.276713   10.125284   \n",
+      "1  10.038850  0.000000     0.0  ...    5.147535    7.685660   10.155552   \n",
+      "2   7.947216  0.724214     0.0  ...    6.020051    8.712809   10.259096   \n",
+      "3   8.268182  1.436801     0.0  ...    7.016452    8.868810   10.720501   \n",
+      "4   6.972830  0.545771     0.0  ...    6.524266    9.411676   10.069087   \n",
+      "\n",
+      "   gene_20524  gene_20525  gene_20526  gene_20527  gene_20528  gene_20529  \\\n",
+      "0    4.298526   10.140664   10.269407   10.548485    9.958225    8.306577   \n",
+      "1    6.664853    8.469345   12.737940   10.332171    8.624295    8.378936   \n",
+      "2    6.131583    9.923582   11.144295    9.244851    9.484299    4.759151   \n",
+      "3    1.995521   10.332137   11.305788   11.012834    9.786600    4.141212   \n",
+      "4    6.364375   10.120640   11.287528   10.915386    9.641678    5.012032   \n",
+      "\n",
+      "   gene_20530  \n",
+      "0    0.000000  \n",
+      "1    0.000000  \n",
+      "2    0.000000  \n",
+      "3    0.512783  \n",
+      "4    0.000000  \n",
+      "\n",
+      "[5 rows x 20532 columns]\n"
      ]
     }
    ],
    "source": [
     "print(train_features.head())\n",
     "print(\"\\n\\n\")\n",
-    "print(train_features.info())\n",
+    "print(train_labels.head())\n",
     "print(\"\\n\\n\")\n",
-    "print(test_featues.info())"
+    "print(test_features.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +114,7 @@
        "Index(['Unnamed: 0'], dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
