--- a/q2.ipynb
+++ b/q2.ipynb
@@ -4,7 +4,207 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>20521</th>\n",
+       "      <th>20522</th>\n",
+       "      <th>20523</th>\n",
+       "      <th>20524</th>\n",
+       "      <th>20525</th>\n",
+       "      <th>20526</th>\n",
+       "      <th>20527</th>\n",
+       "      <th>20528</th>\n",
+       "      <th>20529</th>\n",
+       "      <th>20530</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.017209</td>\n",
+       "      <td>3.265527</td>\n",
+       "      <td>5.478487</td>\n",
+       "      <td>10.431999</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.175175</td>\n",
+       "      <td>0.591871</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.926711</td>\n",
+       "      <td>8.210257</td>\n",
+       "      <td>9.723516</td>\n",
+       "      <td>7.220030</td>\n",
+       "      <td>9.119813</td>\n",
+       "      <td>12.003135</td>\n",
+       "      <td>9.650743</td>\n",
+       "      <td>8.921326</td>\n",
+       "      <td>5.286759</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.592732</td>\n",
+       "      <td>1.588421</td>\n",
+       "      <td>7.586157</td>\n",
+       "      <td>9.623011</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.816049</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.593372</td>\n",
+       "      <td>7.323865</td>\n",
+       "      <td>9.740931</td>\n",
+       "      <td>6.256586</td>\n",
+       "      <td>8.381612</td>\n",
+       "      <td>12.674552</td>\n",
+       "      <td>10.517059</td>\n",
+       "      <td>9.397854</td>\n",
+       "      <td>2.094168</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.511759</td>\n",
+       "      <td>4.327199</td>\n",
+       "      <td>6.881787</td>\n",
+       "      <td>9.870730</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.972130</td>\n",
+       "      <td>0.452595</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.125213</td>\n",
+       "      <td>8.127123</td>\n",
+       "      <td>10.908640</td>\n",
+       "      <td>5.401607</td>\n",
+       "      <td>9.911597</td>\n",
+       "      <td>9.045255</td>\n",
+       "      <td>9.788359</td>\n",
+       "      <td>10.090470</td>\n",
+       "      <td>1.683023</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.663618</td>\n",
+       "      <td>4.507649</td>\n",
+       "      <td>6.659068</td>\n",
+       "      <td>10.196184</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.843375</td>\n",
+       "      <td>0.434882</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.076566</td>\n",
+       "      <td>8.792959</td>\n",
+       "      <td>10.141520</td>\n",
+       "      <td>8.942805</td>\n",
+       "      <td>9.601208</td>\n",
+       "      <td>11.392682</td>\n",
+       "      <td>9.694814</td>\n",
+       "      <td>9.684365</td>\n",
+       "      <td>3.292001</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.655741</td>\n",
+       "      <td>2.821547</td>\n",
+       "      <td>6.539454</td>\n",
+       "      <td>9.738265</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.566967</td>\n",
+       "      <td>0.360982</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.996032</td>\n",
+       "      <td>8.891425</td>\n",
+       "      <td>10.373790</td>\n",
+       "      <td>7.181162</td>\n",
+       "      <td>9.846910</td>\n",
+       "      <td>11.922439</td>\n",
+       "      <td>9.217749</td>\n",
+       "      <td>9.461191</td>\n",
+       "      <td>5.110372</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 20531 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0         1         2         3          4    5         6         7    8  \\\n",
+       "0  0.0  2.017209  3.265527  5.478487  10.431999  0.0  7.175175  0.591871  0.0   \n",
+       "1  0.0  0.592732  1.588421  7.586157   9.623011  0.0  6.816049  0.000000  0.0   \n",
+       "2  0.0  3.511759  4.327199  6.881787   9.870730  0.0  6.972130  0.452595  0.0   \n",
+       "3  0.0  3.663618  4.507649  6.659068  10.196184  0.0  7.843375  0.434882  0.0   \n",
+       "4  0.0  2.655741  2.821547  6.539454   9.738265  0.0  6.566967  0.360982  0.0   \n",
+       "\n",
+       "     9  ...     20521     20522      20523     20524     20525      20526  \\\n",
+       "0  0.0  ...  4.926711  8.210257   9.723516  7.220030  9.119813  12.003135   \n",
+       "1  0.0  ...  4.593372  7.323865   9.740931  6.256586  8.381612  12.674552   \n",
+       "2  0.0  ...  5.125213  8.127123  10.908640  5.401607  9.911597   9.045255   \n",
+       "3  0.0  ...  6.076566  8.792959  10.141520  8.942805  9.601208  11.392682   \n",
+       "4  0.0  ...  5.996032  8.891425  10.373790  7.181162  9.846910  11.922439   \n",
+       "\n",
+       "       20527      20528     20529  20530  \n",
+       "0   9.650743   8.921326  5.286759    0.0  \n",
+       "1  10.517059   9.397854  2.094168    0.0  \n",
+       "2   9.788359  10.090470  1.683023    0.0  \n",
+       "3   9.694814   9.684365  3.292001    0.0  \n",
+       "4   9.217749   9.461191  5.110372    0.0  \n",
+       "\n",
+       "[5 rows x 20531 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -20,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -70,21 +270,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/sut-default-env/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:274: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.cluster import SpectralClustering\n",
-    "from sklearn.mixture import GaussianMixture\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cluster import MeanShift\n",
     "\n",
+    "model = MeanShift()\n",
+    "cluster_labels = model.fit_predict(df)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "kmeans = SpectralClustering(n_clusters=5)\n",
-    "cluster_labels = kmeans.fit_predict(df)\n",
     "\n",
     "output = pd.DataFrame({\"clusters\": cluster_labels}).to_csv(\"./q2/output.csv\")\n"
    ]
