--- a/q2.ipynb
+++ b/q2.ipynb
@@ -270,22 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/sut-default-env/lib/python3.10/site-packages/sklearn/manifold/_spectral_embedding.py:274: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.cluster import MeanShift\n",
+    "from sklearn.cluster import Birch\n",
     "\n",
-    "model = MeanShift()\n",
+    "model = Birch(n_clusters=5)\n",
     "cluster_labels = model.fit_predict(df)\n",
     "\n",
     "\n",
