--- a/q2.ipynb
+++ b/q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 20531 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -270,15 +270,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/sut-default-env/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialization complete\n",
+      "Iteration 0, inertia 30502025.00732115.\n",
+      "Iteration 1, inertia 18710773.663774334.\n",
+      "Iteration 2, inertia 17961152.785181977.\n",
+      "Iteration 3, inertia 17908658.272754006.\n",
+      "Iteration 4, inertia 17906313.9881858.\n",
+      "Iteration 5, inertia 17905484.559916582.\n",
+      "Converged at iteration 5: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 32455688.182634003.\n",
+      "Iteration 1, inertia 18934756.9035061.\n",
+      "Iteration 2, inertia 18510163.444941238.\n",
+      "Iteration 3, inertia 18119877.445154466.\n",
+      "Iteration 4, inertia 17895964.887723573.\n",
+      "Iteration 5, inertia 17852528.25184349.\n",
+      "Iteration 6, inertia 17809439.580558017.\n",
+      "Iteration 7, inertia 17803744.300948434.\n",
+      "Iteration 8, inertia 17803056.554484487.\n",
+      "Converged at iteration 8: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 32411990.19261623.\n",
+      "Iteration 1, inertia 20178459.284648985.\n",
+      "Iteration 2, inertia 19941773.850213155.\n",
+      "Iteration 3, inertia 19457112.49784643.\n",
+      "Iteration 4, inertia 17998556.960591197.\n",
+      "Iteration 5, inertia 17803311.511124704.\n",
+      "Iteration 6, inertia 17802265.791580897.\n",
+      "Converged at iteration 6: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 33688055.663967185.\n",
+      "Iteration 1, inertia 18384633.0368326.\n",
+      "Iteration 2, inertia 17900780.66008336.\n",
+      "Iteration 3, inertia 17825429.749709725.\n",
+      "Iteration 4, inertia 17804654.36974044.\n",
+      "Iteration 5, inertia 17803744.300948434.\n",
+      "Iteration 6, inertia 17803056.554484487.\n",
+      "Converged at iteration 6: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 36124411.436437845.\n",
+      "Iteration 1, inertia 19657695.505821258.\n",
+      "Iteration 2, inertia 19310483.317325253.\n",
+      "Iteration 3, inertia 19198482.729198717.\n",
+      "Iteration 4, inertia 19144507.29908964.\n",
+      "Iteration 5, inertia 19142151.24954613.\n",
+      "Converged at iteration 5: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 36957821.28311953.\n",
+      "Iteration 1, inertia 21823931.61329873.\n",
+      "Iteration 2, inertia 21286511.31744445.\n",
+      "Iteration 3, inertia 20564685.90762651.\n",
+      "Iteration 4, inertia 20287138.590788227.\n",
+      "Iteration 5, inertia 20093197.953578927.\n",
+      "Iteration 6, inertia 20027827.373823844.\n",
+      "Iteration 7, inertia 20018992.571879067.\n",
+      "Converged at iteration 7: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 35393682.31440674.\n",
+      "Iteration 1, inertia 18972965.33115212.\n",
+      "Iteration 2, inertia 18756730.60440498.\n",
+      "Iteration 3, inertia 18266398.235773224.\n",
+      "Iteration 4, inertia 18141661.902376853.\n",
+      "Iteration 5, inertia 17993158.168999594.\n",
+      "Iteration 6, inertia 17815981.49158841.\n",
+      "Iteration 7, inertia 17802878.79623964.\n",
+      "Iteration 8, inertia 17802183.936602235.\n",
+      "Converged at iteration 8: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 31280791.922064073.\n",
+      "Iteration 1, inertia 19367018.131378576.\n",
+      "Iteration 2, inertia 18965690.840322696.\n",
+      "Iteration 3, inertia 18514405.804724142.\n",
+      "Iteration 4, inertia 18116004.497739047.\n",
+      "Iteration 5, inertia 17919352.001402125.\n",
+      "Iteration 6, inertia 17907282.446052745.\n",
+      "Iteration 7, inertia 17905753.97789187.\n",
+      "Iteration 8, inertia 17905484.559916582.\n",
+      "Converged at iteration 8: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 35894385.553615786.\n",
+      "Iteration 1, inertia 21053939.476272456.\n",
+      "Iteration 2, inertia 19870204.97831663.\n",
+      "Iteration 3, inertia 18117414.22896164.\n",
+      "Iteration 4, inertia 17815177.458889145.\n",
+      "Iteration 5, inertia 17803744.30094843.\n",
+      "Iteration 6, inertia 17803056.554484487.\n",
+      "Converged at iteration 6: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 34549685.52590262.\n",
+      "Iteration 1, inertia 19446740.162452206.\n",
+      "Iteration 2, inertia 18617793.376437288.\n",
+      "Iteration 3, inertia 17845733.85417814.\n",
+      "Iteration 4, inertia 17802183.936602235.\n",
+      "Converged at iteration 4: strict convergence.\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.cluster import Birch\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
-    "model = Birch(n_clusters=5)\n",
-    "cluster_labels = model.fit_predict(df)\n",
     "\n",
+    "# Perform KMeans clustering using the similarity matrix\n",
+    "kmeans = KMeans(n_clusters=5, init='k-means++', max_iter=200, verbose=True, tol=0.00001, random_state=42)\n",
+    "cluster_labels = kmeans.fit_predict(df)\n",
     "\n",
     "output = pd.DataFrame({\"clusters\": cluster_labels}).to_csv(\"./q2/output.csv\")\n"
    ]
